[package]
name = "bluebrick-lmsh1-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.4.1"
msgbox = "0.7.0"
bluebrick = { path = "../../loader/rust-bindings" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_UI_Input_XboxController"] }

[lib]
crate-type = ["cdylib"]
